# AESUTIL

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/chen/aesutil/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: aes.cpp  aes.h  base.cpp  base.h  base64.c  util.cpp
app/src/main/java/com/example/chen/aesutil/: MainActivity.java  Util.java
app/src/main/java/com/example/chen/aesutil/jaes/: AESUtil.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/chen/aesutil/: ExampleUnitTest.java
